# archolith-mcp-audit

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PLUGIN_STATUS.md  QWEN.md  README.md  THIRD-PARTY-LICENSES.md  gemini.md  pyproject.toml
.agent/: CHANGELOG.md  README.md  architecture.md  data_models.md
.agent/findings/: 2026-05-28-baseline-token-audit.md  2026-05-28-polling-waste-reduction.md  2026-05-29-delegate-token-usage.md
.agent/workflows/: code_conventions.md  plugin_runtime_verification.md  plugin_wsl_verification.md  release-checklist.md
.github/: copilot-instructions.md
archolith_mcp_audit/: __init__.py  __main__.py  _paths.py  accumulator.py  attributor.py  bootstrap.py  ci.py  cli.py  comparator.py  hook_observer.py  hook_observer_codex.py  hook_observer_standalone.py  hook_session_start.py  mcp_server.py  report.py  schema_estimator.py  telemetry_bridge.py  tokenizer.py  waste_detector.py
archolith_mcp_audit/data/: __init__.py  heuristic_thresholds.json  server_mapping.json
archolith_mcp_audit/detectors/: __init__.py  _helpers.py  cache_breaker.py  config.py  format_waste.py  oversized.py  polling.py  redundant_fields.py  (+1 more)
plugins/: .gitignore
scripts/: install.py  install.sh  release.py
tests/: conftest.py  test_accumulator.py  test_attributor.py  test_bootstrap.py  test_ci.py  test_cli.py  test_cli_smoke.py  test_comparator.py  test_extractors.py  test_hook_observer.py  test_hooks.py  test_mcp_server.py  test_paths.py  test_report.py  test_schema_estimator.py  test_telemetry_bridge.py  test_tokenizer.py  test_waste_detector.py
(+28 files in other folders)
