[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archolith-audit"
version = "0.1.0"
description = "MCP token usage audit system — measures per-server token cost, detects waste patterns, and drives server-side fixes"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
authors = [{ name = "Charles Harvey", email = "ctharvey@me.com" }]
keywords = ["mcp", "token", "audit", "llm", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "tiktoken>=0.7",
    "fastmcp>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
archolith-audit = "archolith_mcp_audit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["archolith_mcp_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
